--- a/Programming Challenges/Maximum Pairwise Product/task-info.yaml
+++ b/Programming Challenges/Maximum Pairwise Product/task-info.yaml
@@ -6,14 +6,14 @@ files:
 - name: maximum_pairwise_product.py
   visible: true
   placeholders:
-  - offset: 439
-    length: 9
+  - offset: 470
+    length: 238
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 439
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -121,4 +121,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/d5xfz/maximum-pairwise-product/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/d5xfz/maximum-pairwise-product/submission">submit
+    to Coursera</a></html>
+  time: Fri, 26 Jun 2020 16:54:22 UTC
 record: -1
