--- a/Programming Challenges/Sum of Two Digits/task-info.yaml
+++ b/Programming Challenges/Sum of Two Digits/task-info.yaml
@@ -45,13 +45,13 @@ files:
   visible: true
   placeholders:
   - offset: 220
-    length: 20
+    length: 26
     placeholder_text: write your code here
     initial_state:
       length: 20
       offset: 220
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3 (this comment tells the grading system at Coursera to use python3 rather than python3)
@@ -68,4 +68,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/ZtG0y/a-plus-b/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/ZtG0y/a-plus-b/submission">submit
+    to Coursera</a></html>
+  time: Fri, 26 Jun 2020 16:41:29 UTC
 record: -1
