--- a/Algorithmic Warm Up/Last Digit of Fibonacci Number/task-info.yaml
+++ b/Algorithmic Warm Up/Last Digit of Fibonacci Number/task-info.yaml
@@ -4,13 +4,13 @@ files:
   visible: true
   placeholders:
   - offset: 303
-    length: 9
+    length: 277
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 303
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -39,13 +39,13 @@ files:
   visible: true
   placeholders:
   - offset: 466
-    length: 9
+    length: 6
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 466
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -104,4 +104,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/submission">submit
+    to Coursera</a></html>
+  time: Mon, 29 Jun 2020 15:35:10 UTC
 record: -1
