--- a/Algorithmic Warm Up/Least Common Multiple/task-info.yaml
+++ b/Algorithmic Warm Up/Least Common Multiple/task-info.yaml
@@ -3,14 +3,14 @@ files:
 - name: lcm.py
   visible: true
   placeholders:
-  - offset: 292
-    length: 9
+  - offset: 307
+    length: 108
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 292
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -40,13 +40,13 @@ files:
   visible: true
   placeholders:
   - offset: 337
-    length: 9
+    length: 11
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 337
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -102,4 +102,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/b66y2/programming-assignment-1-introduction/submission">submit
+    to Coursera</a></html>
+  time: Mon, 29 Jun 2020 15:59:15 UTC
 record: -1
