--- a/Greedy Algorithms/Money Change/task-info.yaml
+++ b/Greedy Algorithms/Money Change/task-info.yaml
@@ -6,14 +6,14 @@ files:
 - name: money_change.py
   visible: true
   placeholders:
-  - offset: 74
-    length: 9
+  - offset: 88
+    length: 168
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 74
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -32,13 +32,13 @@ files:
   visible: true
   placeholders:
   - offset: 187
-    length: 9
+    length: 18
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 187
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -82,4 +82,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/kAiGl/programming-assignment-2-greedy-algorithms/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/kAiGl/programming-assignment-2-greedy-algorithms/submission">submit
+    to Coursera</a></html>
+  time: Mon, 29 Jun 2020 23:44:49 UTC
 record: -1
