--- a/Divide-and-Conquer/Binary Search/task-info.yaml
+++ b/Divide-and-Conquer/Binary Search/task-info.yaml
@@ -4,7 +4,7 @@ files:
   visible: true
   placeholders:
   - offset: 241
-    length: 9
+    length: 15
     placeholder_text: type here
     initial_state:
       length: 9
@@ -12,14 +12,14 @@ files:
     initialized_from_dependency: false
     selected: true
     status: Unchecked
-  - offset: 520
-    length: 9
+  - offset: 526
+    length: 36
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 520
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -105,8 +105,8 @@ files:
 - name: binary_search.py
   visible: true
   placeholders:
-  - offset: 288
-    length: 9
+  - offset: 290
+    length: 303
     placeholder_text: type here
     initial_state:
       length: 9
@@ -142,4 +142,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/submission">submit
+    to Coursera</a></html>
+  time: Wed, 01 Jul 2020 01:05:55 UTC
 record: -1
