--- a/Divide-and-Conquer/Improving QuickSort/task-info.yaml
+++ b/Divide-and-Conquer/Improving QuickSort/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: quicksort_unit_tests.py
   visible: true
   placeholders:
-  - offset: 244
-    length: 17
+  - offset: 242
+    length: 53
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 240
     initialized_from_dependency: false
     selected: true
-    status: Failed
+    status: Unchecked
   text: |
     import unittest
     from quicksort import randomized_quick_sort
@@ -74,17 +74,17 @@ files:
 - name: quicksort.py
   visible: true
   placeholders:
-  - offset: 793
-    length: 13
+  - offset: 1010
+    length: 730
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 80
     initialized_from_dependency: false
     selected: true
-    status: Failed
-  - offset: 1047
-    length: 128
+    status: Unchecked
+  - offset: 1981
+    length: 143
     placeholder_text: "make a call to partition3 and then two recursive calls \nto\
       \ randomized_quick_sort"
     initial_state:
@@ -92,7 +92,7 @@ files:
       offset: 259
     initialized_from_dependency: false
     selected: true
-    status: Failed
+    status: Unchecked
   text: "# python3\n\nfrom random import randint\n\n\ndef partition3(array, left,\
     \ right):\n    type here\n\n\ndef randomized_quick_sort(array, left, right):\n\
     \    if left >= right:\n        return\n    k = randint(left, right)\n    array[left],\
@@ -103,9 +103,9 @@ files:
     \ - 1)\n    print(*elements)\n"
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/discussions
-status: Failed
+status: Unchecked
 feedback:
-  message: Some unit tests failed. Please fix your code, ensure that all unit tests
-    pass, and try again.
-  time: Thu, 02 Jul 2020 21:05:30 UTC
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/submission">submit
+    to Coursera</a></html>
+  time: Fri, 03 Jul 2020 05:24:29 UTC
 record: -1
