--- a/Divide-and-Conquer/Majority Element/task-info.yaml
+++ b/Divide-and-Conquer/Majority Element/task-info.yaml
@@ -6,14 +6,14 @@ files:
 - name: majority_element.py
   visible: true
   placeholders:
-  - offset: 268
-    length: 9
+  - offset: 269
+    length: 1332
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 268
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     # python3
@@ -42,14 +42,14 @@ files:
 - name: majority_element_unit_tests.py
   visible: true
   placeholders:
-  - offset: 296
+  - offset: 302
     length: 9
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 296
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Unchecked
   text: |
     import unittest
@@ -125,4 +125,8 @@ files:
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/discussions
 status: Unchecked
+feedback:
+  message: <html>Local tests passed, please <a href="https://www.coursera.org/learn/algorithmic-toolbox/programming/w9YDz/programming-assignment-3-divide-and-conquer/submission">submit
+    to Coursera</a></html>
+  time: Fri, 03 Jul 2020 07:58:48 UTC
 record: -1
