--- a/Dynamic Programming/Primitive Calculator/task-info.yaml
+++ b/Dynamic Programming/Primitive Calculator/task-info.yaml
@@ -6,15 +6,15 @@ files:
 - name: primitive_calculator_unit_tests.py
   visible: true
   placeholders:
-  - offset: 186
-    length: 9
+  - offset: 188
+    length: 6
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 186
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
   text: |
     import unittest
     from primitive_calculator import compute_operations
@@ -61,15 +61,15 @@ files:
 - name: primitive_calculator.py
   visible: true
   placeholders:
-  - offset: 72
-    length: 9
+  - offset: 533
+    length: 0
     placeholder_text: type here
     initial_state:
       length: 9
       offset: 72
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
   text: |
     # python3
 
@@ -86,5 +86,9 @@ files:
         print(*output_sequence)
   learner_created: false
 feedback_link: https://www.coursera.org/learn/algorithmic-toolbox/programming/ekN4T/programming-assignment-4-dynamic-programming/discussions
-status: Unchecked
+status: Failed
+feedback:
+  message: Some unit tests failed. Please fix your code, ensure that all unit tests
+    pass, and try again.
+  time: Sun, 05 Jul 2020 09:44:35 UTC
 record: -1
